--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ linkedin-mcp = "linkedin_mcp.server:main"
 [project]
 name = "linkedin-mcp"
 authors = [{name = "Filipp Trigub", email = "filipp@trigub.tech"}]
-version = "0.1.2"
+version = "0.1.4"
 description = "LinkedIn MCP server with auth and posting tools."
 readme = "README.md"
 requires-python = ">=3.12"
@@ -20,3 +20,6 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "python-jose[cryptography]>=3.3.0",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/linkedin", "src/config"]
